--- a/translations/messages.it.yml
+++ b/translations/messages.it.yml
@@ -459,7 +459,7 @@ allergens.SULPHUR_DIOXIDE_SULPHITES: Anidride solforosa e solfiti
 orders.payment_refunded: Pagamento rimborsato con successo
 form.local_business.iso_code.fr.vat_number: Numero di partita IVA
 receipt.title: 'Ricevuta del tuo ordine #%number%'
-receipt.billing_details: Ordine pagato tramite carta di credito il %date%
+receipt.billing_details: Ordine pagato tramite %payment_method% il %date%
 form.delivery_import.file.label: File
 notifications.messenger_approaching: Ciao %customer%! Il nostro corriere %messenger%
   è vicino a te. Preparati!
