clean: do not show order.id on order page

--- a/translations/messages.an.yml
+++ b/translations/messages.an.yml
@@ -288,7 +288,7 @@ profile.managedRestaurants: 'Restaurants chestionaus per l''usuario'
 profile.accountType: 'Tipo de cuenta'
 order.cart.title: 'Cesta'
 order.items.products_with_count: 'Productos (%count%)'
-order.summary.heading: 'Pediu %number% (#%id%)'
+order.summary.heading: 'Pediu %number%'
 order.total_excluding_tax: 'Total (sin IVA)'
 order.total_including_tax: 'Total (IVA incl.)'
 order.items_total: 'Total productos'
