--- a/translations/messages.de.yml
+++ b/translations/messages.de.yml
@@ -304,7 +304,7 @@ profile.managedStores: Vom Benutzer verwaltete Shops
 profile.managedRestaurants: Vom Benutzer verwaltete Restaurants
 profile.accountType: Kontotyp
 order.cart.title: Warenkorb
-order.summary.heading: Auftrag %number% (#%id%)
+order.summary.heading: Auftrag %number%
 order.items_total: Alle Artikel insgesamt
 order.total_tax: Steuern
 order.preparation_expected_at: Erwartete Bereitstellung bis zum %date%
@@ -460,8 +460,8 @@ index.view_all_restaurants: Alle Restaurants
 index.our_restaurants: Unsere Restaurants
 index.banner: Dein Lieblingsessen zu dir nach Hause
 stores.addresses: Adressen
-stores.deliveries.heading: 'Lieferung #%delivery_id% - %delivery_distance%'
-stores.deliveries.heading2: 'Lieferung #%delivery_id%'
+stores.deliveries.heading: 'Lieferung %delivery_id% - %delivery_distance%'
+stores.deliveries.heading2: 'Lieferung %delivery_id%'
 stores.deliveries: Lieferungen
 stores.api_keys: API Schlüssel
 stores.pricing_rule_set: Preisermittlung
