--- a/translations/messages.eu.yml
+++ b/translations/messages.eu.yml
@@ -277,7 +277,7 @@ profile.managedRestaurants: 'Erabiltzaileak kudeatutako jatetxeak'
 profile.accountType: 'Kontu mota'
 order.cart.title: 'Orga'
 order.items.products_with_count: 'Produktuak (%count%)'
-order.summary.heading: '%number% eskaera (#%id%)'
+order.summary.heading: '%number% eskaera'
 order.total_excluding_tax: 'Guztira (BEZik gabe)'
 order.total_including_tax: 'Guztira (BEZa barne)'
 order.items_total: 'Produktuak guztira'
