add a checkbox to include tasks from orders in tour

--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -434,6 +434,7 @@
         "SEARCH_PLACEHOLDER": "A shop, a dish…",
         "SEARCH_PRODUCT_ITEM_SUBTITLE": "In {{- shop}}",
         "ADMIN_DASHBOARD_CREATE_TOUR": "Create tour",
+        "ADMIN_DASHBOARD_INCLUDE_TASKS_FROM_ORDER": "Include all tasks from orders",
         "ADMIN_DASHBOARD_TOUR_NAME": "Tour name",
         "SAVE_CREDIT_CARD": "Save credit card",
         "PAY_WITH_SAVED_CREDIT_CARD": "Pay with a saved credit card",
