--- a/js/app/i18n/locales/es.json
+++ b/js/app/i18n/locales/es.json
@@ -385,6 +385,7 @@
         "SEARCH_ORDER_NUMBER_ERROR": "Ingrese un número de pedido válido",
         "ADD_PRODUCTS_TO_ORDER_TITLE": "Agregar productos al pedido #{{number}}",
         "ADMIN_DASHBOARD_CREATE_TOUR": "Crear una ruta",
+        "ADMIN_DASHBOARD_INCLUDE_TASKS_FROM_ORDER": "Incluir todas las tareas del pedidos",
         "ADMIN_DASHBOARD_TOUR_NAME": "Nombre de la ruta",
         "SAVE_CREDIT_CARD": "Guardar tarjeta de crédito",
         "PAY_WITH_SAVED_CREDIT_CARD": "Pagar con una tarjeta de crédito guardada",
