fix: add filter to show only one rider

--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -26,6 +26,7 @@
         "DISABLED": "Disabled",
         "UNDO": "Undo",
         "CLEAR": "Clear",
+        "ONLY": "Only",
         "new": "New orders",
         "accepted": "Accepted",
         "refused": "Refused",
@@ -89,6 +90,7 @@
         "ADMIN_DASHBOARD_FILTERS_TAB_COURIERS": "Couriers",
         "ADMIN_DASHBOARD_FILTERS_TAB_TIMERANGE": "Time range",
         "ADMIN_DASHBOARD_FILTERS_SHOW": "Show",
+        "ADMIN_DASHBOARD_FILTERS_SHOW_ALL": "Show all",
         "ADMIN_DASHBOARD_FILTERS_HIDE": "Hide",
         "ADMIN_DASHBOARD_FILTERS_INCIDENT_REPORTED_TASKS": "Tasks with incident reports",
         "ONLY_SHOW_THESE": "Only show these",
