--- a/js/app/i18n/locales/fr.json
+++ b/js/app/i18n/locales/fr.json
@@ -517,6 +517,13 @@
         "PM_CREDIT_OR_DEBIT_CARD": "Carte bancaire",
         "PM_CASH": "Espèces",
         "PM_EDENRED": "Edenred",
-        "PM_GIROPAY": "Giropay"
+        "PM_GIROPAY": "Giropay",
+        "DELIVERY_OPTIMIZATION_SUGGESTION_TITLE": "Nous avons trouvé une route plus optimisée pour votre livraison.",
+        "DELIVERY_OPTIMIZATION_SUGGESTION_GAIN": "Celle-ci nous ferait gagner une distance de {{distance}}.",
+        "DELIVERY_OPTIMIZATION_SUGGESTION_CONFIRM": "Voulez-vous appliquer la route optimisée ?",
+        "DELIVERY_OPTIMIZATION_SUGGESTION_CURRENT": "Ordre actuel",
+        "DELIVERY_OPTIMIZATION_SUGGESTION_SUGGESTED": "Ordre suggéré",
+        "DELIVERY_OPTIMIZATION_SUGGESTION_YES": "Oui",
+        "DELIVERY_OPTIMIZATION_SUGGESTION_NO": "Non, merci"
     }
 }
