--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -753,7 +753,13 @@ form.time_slot.prior_notice_hours.label: Prior notice (hours)
 form.package_set.name.label: Name
 form.package_set.packages.label: Packages
 form.package.name.label: Name
-form.package.volume_units.label: Volume units
+form.package.description.label: Customer description
+form.package.average_volume_units.label: Average volume units
+form.package.max_volume_units.label: Max volume units
+form.package.average_estimation: Estimated to 75% of max if not set
+form.package.average_weight.label: Average weight
+form.package.max_weight.label: Max weight
+form.package.shortCode.label: Code
 form.reusable_packaging.name.label: Name
 form.reusable_packaging.is_tracked.label: Tracking enabled
 form.reusable_packaging.price.label: Price
