--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -759,7 +759,7 @@ form.package.max_volume_units.label: Max volume units
 form.package.average_estimation: Estimated to 75% of max if not set
 form.package.average_weight.label: Average weight
 form.package.max_weight.label: Max weight
-form.package.shortCode.label: Code
+form.package.shortCode.label: 2 letter code
 form.reusable_packaging.name.label: Name
 form.reusable_packaging.is_tracked.label: Tracking enabled
 form.reusable_packaging.price.label: Price
