clean: add translations

--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -753,7 +753,7 @@ form.time_slot.prior_notice_hours.label: Prior notice (hours)
 form.package_set.name.label: Name
 form.package_set.packages.label: Packages
 form.package.name.label: Name
-form.package.description.label: Customer description
+form.package.description.label: Description for the customer
 form.package.average_volume_units.label: Average volume units
 form.package.max_volume_units.label: Max volume units
 form.package.average_estimation: Estimated to 75% of max if not set
