--- a/translations/messages.fr.yml
+++ b/translations/messages.fr.yml
@@ -888,11 +888,12 @@ form.package.name.label: Nom
 form.package_set.packages.label: Emballages
 form.package_set.name.label: Nom
 form.package.description.label: Description pour le client
-form.package.average_volume_units.label: Unités de volume moyen
-form.package.max_volume_units.label: Unités de volume maximum
+form.package.enter_details: Click pour entrer les détails du paquet
+form.package.average_volume_units.label: Unités de volume moyen (VU)
+form.package.max_volume_units.label: Unités de volume maximum (VU)
 form.package.average_estimation: Estimé à 75 % du maximum si non défini
-form.package.average_weight.label: Poids moyen
-form.package.max_weight.label: Poids maximum
+form.package.average_weight.label: Poids moyen (kg)
+form.package.max_weight.label: Poids maximum (kg)
 form.package.shortCode.label: Code de 2 lettres
 form.time_slot.interval.label: Intervalle
 form.delivery.packages.label: Marchandise
