--- a/js/app/i18n/locales/fr.json
+++ b/js/app/i18n/locales/fr.json
@@ -142,6 +142,7 @@
         "ADMIN_DASHBOARD_NO_SELECTED_TASKS": "Veuillez sélectionner une tâche",
         "ADMIN_DASHBOARD_WAIT_FOR_PREVIOUS_ASSIGN": "En attente de l'attribution précédente",
         "ADMIN_DASHBOARD_AND_CLOSE_THE_INCIDENT": "{{action}} et fermer l'incident",
+        "ADMIN_DASHBOARD_HIDE_SHOW_ON_MAP": "Masquer/afficher sur la carte",
         "USER_EDIT_ENABLED_LABEL": "Activé",
         "USER_EDIT_DISABLED_LABEL": "Désactivé",
         "ORDER_TIMELINE_CREATED_TITLE": "{{date}} Commande créée",
