clean: update translations

--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -754,7 +754,7 @@ form.package_set.name.label: Name
 form.package_set.packages.label: Packages
 form.package.name.label: Name
 form.package.color.label: Color (click to select)
-form.package.enter_details: Click to enter package details
+form.package.enter_details: Show/hide details
 form.package.description.label: Description for the customer
 form.package.average_volume_units.label: Average volume units (VU)
 form.package.max_volume_units.label: Max volume units (VU)
