--- a/translations/messages.de.yml
+++ b/translations/messages.de.yml
@@ -487,7 +487,7 @@ form.package.average_estimation: Geschätzt auf 75 % des Maximums, wenn nicht fe
 form.package.average_weight.label: Durchschnittsgewicht (kg)
 form.package.max_weight.label: Maximalgewicht (kg)
 form.package.shortCode.label: 2-Buchstaben-Code
-form.package.enter_details:  Klicken um Paketdetails einzugeben
+form.package.enter_details:  Details ein-/ausblenden
 form.package_set.packages.label: Verpackungen
 form.package_set.name.label: Name
 form.time_slot_choice.end_time.label: Endzeit
