--- a/translations/messages.fr.yml
+++ b/translations/messages.fr.yml
@@ -888,7 +888,7 @@ form.package.name.label: Nom
 form.package_set.packages.label: Emballages
 form.package_set.name.label: Nom
 form.package.description.label: Description pour le client
-form.package.enter_details: Click pour entrer les détails du paquet
+form.package.enter_details: Masquer/afficher les détails
 form.package.average_volume_units.label: Unités de volume moyen (VU)
 form.package.max_volume_units.label: Unités de volume maximum (VU)
 form.package.average_estimation: Estimé à 75 % du maximum si non défini
