--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -574,6 +574,7 @@
         "DELIVERY_OPTIMIZATION_SUGGESTION_CURRENT": "Current order",
         "DELIVERY_OPTIMIZATION_SUGGESTION_SUGGESTED": "Suggested order",
         "DELIVERY_OPTIMIZATION_SUGGESTION_YES": "Yes",
-        "DELIVERY_OPTIMIZATION_SUGGESTION_NO": "No, thanks"
+        "DELIVERY_OPTIMIZATION_SUGGESTION_NO": "No, thanks",
+        "MONTHLY_FIXED_COSTS": "Monthly fixed costs"
     }
 }
