--- a/js/app/i18n/locales/fr.json
+++ b/js/app/i18n/locales/fr.json
@@ -524,6 +524,7 @@
         "DELIVERY_OPTIMIZATION_SUGGESTION_CURRENT": "Ordre actuel",
         "DELIVERY_OPTIMIZATION_SUGGESTION_SUGGESTED": "Ordre suggéré",
         "DELIVERY_OPTIMIZATION_SUGGESTION_YES": "Oui",
-        "DELIVERY_OPTIMIZATION_SUGGESTION_NO": "Non, merci"
+        "DELIVERY_OPTIMIZATION_SUGGESTION_NO": "Non, merci",
+        "MONTHLY_FIXED_COSTS": "Coûts fixes mensuels"
     }
 }
