feat: add the possibility to auto-assign deliveries from a store

--- a/translations/messages.es.yml
+++ b/translations/messages.es.yml
@@ -1068,6 +1068,9 @@ guest_checkout.user_with_same_email_exists: Ya existe una cuenta con el mismo co
 guest_checkout.use_another_email: Usar otro correo electrónico
 form.store_type.package_set.placeholder: Elija un paquete conjunto
 form.store_type.time_slot.placeholder: Elija una franja horaria
+form.store_type.defaultCourier.label: Mensajero·a predeterminado
+form.store_type.defaultCourier.placeholder: Ninguno
+form.store_type.defaultCourier.help: Los pedidos realizados para esta tienda se asignarán automáticamente a este mensajero·a
 profile.fullName: Nombre completo
 restaurant.form.section.taxonomy: Taxonomía
 localBusiness.form.business_address.label: Dirección comercial
