--- a/translations/messages.de.yml
+++ b/translations/messages.de.yml
@@ -367,6 +367,9 @@ form.store_type.setAsDefault.label: Als Hauptadresse festlegen
 form.store_type.defaultAddress.label: Hauptadresse
 form.store_type.time_slot.label: Zeitraum
 form.store_type.package_set.label: Paketset
+form.store_type.defaultCourier.label: Standardkurier
+form.store_type.defaultCourier.placeholder: Keiner
+form.store_type.defaultCourier.help: Bestellungen für diesen Laden werden automatisch diesem Kurier zugewiesen
 form.delivery.vehicle.placeholder: Wähle Fahrzeugtyp aus
 form.delivery.vehicle.label: Fahrzeug order Cargobike?
 form.delivery.distance.label: Entfernung
