--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -1302,6 +1302,9 @@ form.delivery.arbitrary_price.label: Define the price manually
 form.delivery.bookmark.label: Add to Saved orders
 form.store_type.time_slots.label: Time slots
 form.store_type.time_slots.set_as_default: Set as default time slot
+form.store_type.defaultCourier.label: Default courier
+form.store_type.defaultCourier.placeholder: None
+form.store_type.defaultCourier.help: Orders placed for this store will be automatically assigned to this courier
 homepage.featured: Featured
 homepage.exclusive: Exclusives
 homepage.shops.new: New shops
