--- a/translations/validators.fr.yml
+++ b/translations/validators.fr.yml
@@ -61,3 +61,5 @@ spreadsheet.missing_column: Vous devez définir une colonne « %column% »
 spreadsheet.missing_columns: Vous devez définir une colonne « %column% » ou une colonne « %other_column% »
 spreadsheet.alternative_columns: Vous devez définir une colonne « %column% » ou une colonne « %other_column% » column, mais pas les deux
 spreadsheet.csv_encoding: Les fichiers CSV doivent être encodés en UTF-8
+
+siret.head_office: Vous devez fournir le numéro SIRET de l'établissement, et non du siège social.
