clean: some styling

--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -115,6 +115,7 @@
         "ADMIN_DASHBOARD_TASK_FORM_ADDRESS_NAME_LABEL": "Name",
         "ADMIN_DASHBOARD_TASK_FORM_ADDRESS_NAME_PLACEHOLDER": "Home, work…",
         "ADMIN_DASHBOARD_TASK_FORM_ADDRESS_TELEPHONE_LABEL": "Phone number",
+        "ADMIN_DASHBOARD_TASK_FORM_ADDRESS_TELEPHONE_PLACEHOLDER": "01 23 45 67 89",
         "ADMIN_DASHBOARD_TASK_FORM_ADDRESS_DESCRIPTION_LABEL": "Instructions",
         "ADMIN_DASHBOARD_TASK_FORM_ADDRESS_DESCRIPTION_PLACEHOLDER": "2nd door on the left…",
         "ADMIN_DASHBOARD_TASK_FORM_ADDRESS_CONTACT_NAME_LABEL": "Contact name",
