--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -1556,4 +1556,4 @@ form.billing_method.help: Billing method used
 form.billing_method.unit: Per unit
 form.billing_method.percentage: Percentage of order amount
 order.export.heading.billing_method: Billing method
-order.export.heading.store_type: Store type
+order.export.heading.applied_billing: Applied billing
