--- a/translations/validators.fr.yml
+++ b/translations/validators.fr.yml
@@ -26,6 +26,7 @@ delivery.tasks.unexpectedCount: La entrega debe consistir en dos tareas.
 delivery.tasks.pickupAfterDropoff: La date de dépôt doit être postérieure à la date de retrait.
 
 delivery.check.notValid: Votre demande n'est pas réalisable
+delivery.check.outOfBounds: Votre demande est en dehors de la zone acceptée ou trop éloignée
 
 time_range.empty: Vous n'avez sélectionné aucune valeur
 time_range.no_weekday: Vous n'avez pas sélectionné de jour de la semaine
