added: LEGAL business name and tax ID number

--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -1484,6 +1484,8 @@ registration.company.address: "Address"
 registration.company.address.different.for.billing: "Different address for billing"
 registration.company.billing.address: "Billing address"
 registration.step.company.name: "Name of the company"
+registration.step.company.legal_name: "Legal name of the company"
+registration.step.company.vat_number: "VAT number"
 registration.step.invitation.copy.link: "Copy the link below and send it to your colleagues"
 registration.step.invitation.copy.button: "Copy the link"
 registration.step.invitation.link.copied: "Copied"
