--- a/translations/messages.fr.yml
+++ b/translations/messages.fr.yml
@@ -1411,6 +1411,8 @@ registration.form.title: "Vos informations"
 registration.step.personal: "Informations personnelles"
 registration.step.company: "Informations société"
 registration.step.company.name: "Nom de la société"
+registration.step.company.legal_name: "Nom légal de la société"
+registration.step.company.vat_number: "Numéro de TVA"
 registration.step.invitation: "Invitez vos collègues"
 registration.step.invitation.copy.link: "Copiez le lien ci-dessous et envoyez-le à vos collègues"
 registration.step.invitation.copy.button: "Copier le lien"
