--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -1557,3 +1557,4 @@ form.billing_method.unit: Per unit
 form.billing_method.percentage: Percentage of order amount
 order.export.heading.billing_method: Billing method
 order.export.heading.applied_billing: Applied billing
+deliveries.import_upload_error: The file couldn't be uploaded. Please try again later.
