--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -756,11 +756,14 @@ form.package.name.label: Name
 form.package.color.label: Color (click to select)
 form.package.enter_details: Show/hide details
 form.package.description.label: Description for the customer
+form.package.maxWeight.help: Not applied yet
 form.package.average_volume_units.label: Average volume units (VU)
 form.package.max_volume_units.label: Max volume units (VU)
 form.package.average_estimation: Estimated to 75% of max if not set
+form.package.max_volume_units: This value will be used to calculate prices based on volume
 form.package.average_weight.label: Average weight (kg)
 form.package.max_weight.label: Max weight (kg)
+form.package.tags.label: Tags to apply automatically to tasks
 form.package.shortCode.label: 2 letter code
 form.reusable_packaging.name.label: Name
 form.reusable_packaging.is_tracked.label: Tracking enabled
