updated: docs label

--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -1,5 +1,5 @@
 global.changesSaved: Your changes have been saved.
-docs.label: Learn more
+docs.label: Docs
 navbar.login: Login
 navbar.myAccount: My Account
 base.footer.contactUs: Contact us
