--- a/translations/messages.fr.yml
+++ b/translations/messages.fr.yml
@@ -1351,6 +1351,7 @@ form.failure_reason.description.label: Description
 basics.manage: Gérer
 basics.settings: Paramètres
 form.store_type.failure_reason_set.label: "Motifs d'échec"
+form.store_type.failure_reason_set.help: Sélectionnez une liste de <a href="%failure_reason_set%">raisons d\'échec</a> à utiliser dans ce %entity%.
 profile.delete_my_account: "Supprimer mon compte"
 profile.type_username_to_confirm: "Saisissez votre nom d'utilisateur pour confirmer la suppression du compte"
 form.pricing_rule_set.options.label: Options
@@ -1441,3 +1442,142 @@ form.settings.company_legal_id.label: "Numéro de SIRET"
 form.settings.company_legal_id.help: "Ce numéro est généralement disponible sur les documents officiels de l'entreprise, tels que les factures ou les contrats."
 restaurant.form.edenred_enabled.label: Activer Edenred
 restaurant.form.paygreen_shop_id.label: Identifiant de boutique Paygreen
+adminDashboard.users.export.optins.title: "Sélectionnez ce que vous souhaitez exporter"
+adminDashboard.users.export.optins.newsletter: "Utilisateurs qui acceptent de recevoir la newsletter"
+adminDashboard.users.export.optins.marketting: "Utilisateurs qui acceptent de recevoir des promotions"
+adminDashboard.pricing.duplicate: "Dupliquer"
+adminDashboard.pricing.copyOf: "Copie de %rule_set_name%"
+restaurant.form.allow_mercadopago_connect.label: "Permettre au restaurant de gérer son compte Mercadopago de manière autonome"
+restaurant.form.auto_accept_orders_enabled.label: "Accepter automatiquement les commandes"
+profile.orders: "Commandes"
+profile.configuration: "Configuration"
+order.payer.title: "Informations sur l'acheteur"
+order.payer.email: "E-mail"
+order.payer.identificationType: "Type d'identification"
+order.payer.identificationNumber: "Numéro d'identification"
+order.state.started: "En préparation"
+order.state.ready: "Prêt"
+form.payment.refund_liable.label: "Partie responsable"
+form.payment.refund_application_fee.help: "Si vous cochez cette case, la commission facturée par la plateforme au partenaire sera remboursée proportionnellement\n<br>\n<a href=\"https://stripe.com/docs/connect/direct-charges#issuing-refunds\">En savoir plus</a>\n"
+form.registration.terms.and.conditions.label: "J'accepte les Conditions Générales"
+form.registration.terms.and.conditions.help: "En cochant cette case, vous acceptez nos <a href=\"%terms_url%\">Conditions Générales</a>."
+form.registration.privacy.policy.label: "J'accepte la Politique de Confidentialité"
+form.registration.privacy.policy.help: "En cochant cette case, vous acceptez notre <a href=\"%privacy_url%\">Politique de Confidentialité</a>."
+form.credit_note.user_search.label: "Utilisateur"
+form.credit_note.type.label: "Type de réduction"
+form.credit_note.percentage.label: "Pourcentage"
+form.embed_settings.show_home_page.label: "Afficher sur la page d'accueil"
+form.package.color.label: "Couleur (cliquez pour sélectionner)"
+form.package.maxWeight.help: "(Non utilisé ailleurs sur la plateforme pour le moment)"
+roles.ROLE_DISPATCHER: "Dispatcheur"
+roles.ROLE_DISPATCHER.help: "Dispatcheur : Accès complet aux tâches\n"
+activity.order.updated: "La commande #order/%aggregate_id% a été mise à jour\n"
+basics.select_all: "Tout sélectionner"
+basics.delete_selected: "Supprimer la sélection"
+delivery.table.heading.owner: "Propriétaire"
+delivery.import.success_message: "Votre fichier a été traité avec succès, %count% livraisons ont été créées"
+form.delivery_import.file.label: "Fichier"
+notifications.restaurant.accepted_order: "Nouvelle commande"
+food_establishment.CAFE_OR_COFFEE_SHOP: "Café ou salon de thé"
+food_establishment.DISTILLERY: "Distillerie"
+food_establishment.FAST_FOOD_RESTAURANT: "Restaurant de restauration rapide"
+food_establishment.ICE_CREAM_SHOP: "Glacier"
+food_establishment.RESTAURANT: "Restaurant"
+store.DEPARTMENT_STORE: "Grand magasin"
+store.HARDWARE_STORE: "Quincaillerie"
+store.LIQUOR_STORE: "Magasin de spiritueux"
+store.MENS_CLOTHING_STORE: "Magasin de vêtements pour hommes"
+store.MOBILE_PHONE_STORE: "Magasin de téléphones mobiles"
+store.MOVIE_RENTAL_STORE: "Magasin de location de films"
+store.OFFICE_EQUIPMENT_STORE: "Magasin de matériel de bureau"
+store.OUTLET_STORE: "Magasin d'usine"
+store.PAWN_SHOP: "Prêteur sur gages"
+store.PET_STORE: "Magasin pour animaux"
+store.SPORTING_GOODS_STORE: "Magasin d'articles de sport"
+store.TIRE_SHOP: "Magasin de pneus"
+store.WHOLESALE_STORE: "Magasin de vente en gros"
+form.local_business_type.food_establishment: "Établissement alimentaire"
+form.local_business_type.store: "Magasin"
+form.local_business_type.label: "Type d'entreprise"
+form.local_business_type.help: "Les types utilisent le vocabulaire de <a href=\"https://schema.org/\">schema.org</a> pour les <a href=\"https://schema.org/FoodEstablishment\">établissements alimentaires</a> et les <a href=\"https://schema.org/Store\">magasins</a>"
+users.dispatchers: "Dispatcheurs"
+refund.list.disclaimer.admin: "Lorsque la plateforme est responsable de l'incident, cela signifie que la plateforme doit au commerçant le montant du remboursement, car le commerçant a effectivement remboursé le client."
+dabba.oauth_connect.success: "Compte Dabba connecté avec succès !"
+promotion_action.percentage_discount: "%percentage% de réduction"
+promotion_action.delivery_percentage_discount: "%percentage% de réduction sur les frais de livraison"
+promotion_action.fixed_discount: "%amount% de réduction"
+form.customize.order_confirm_enabled.label: Afficher un message de confirmation de commande personnalisé
+form.customize.order_confirm.label: "Ce message apparaîtra sur la page de confirmation de commande"
+order.export.heading.promotions: "Promotions"
+form.business_account.businessRestaurantGroup.label: "Groupe de restaurants d'affaires"
+form.business_account.businessRestaurantGroup.placeholder: "Choisissez un groupe de restaurants d'affaires"
+form.business_acount.resend_invitation.confirm: "L'email d'invitation à Coopcycle a été renvoyé"
+form.business_acount.resend_invitation.failed: "Une erreur s'est produite lors de la tentative de renvoi de l'email d'inscription au compte d'affaires"
+adminDashboard.business_restaurant_group_list.title: "Liste des groupes de restaurants d'affaires"
+adminDashboard.business_restaurant_group.title: "Groupe de restaurants d'affaires"
+adminDashboard.business_restaurant_group.createNew: "Créer un nouveau groupe de restaurants d'affaires"
+form.time_slot.preview_title: "Aperçu du créneau horaire"
+form.checkout_address.reusable_packaging_vytal_enabled.label: "Je veux utiliser des conteneurs Vytal"
+vytal.code.disclaimer: "Ouvrez l'application Vytal, générez un jeton de livraison, puis entrez-le ci-dessous. <a href=\"https://www.vytal.org/bestellen\" target=\"_blank\">En savoir plus</a>"
+restaurant.form.section.vytal: "Vytal"
+restaurant.form.vytal_enabled.label: "Activer le système de consigne Vytal"
+form.settings.addresses.title: "Adresses"
+form.settings.autocomplete_provider.label: "Fournisseur de suggestions"
+form.settings.google_api_key_custom.label: "Clé API Google"
+form.settings.geocoding_provider.label: "Fournisseur de géocodage"
+form.settings.geocoding_provider.help: "Utilisé par l'API et lors de l'importation de feuilles de calcul"
+form.vehicle.volume_units.label: "Unités de volume"
+form.vehicle.max_weight.label: "Poids maximum (kg)"
+vehicles.breadcrumb: "Véhicules"
+vehicles.breadcrumb.help: "Définir la flotte de véhicules"
+tasks.mark_as_done.has_previous: "La tâche #%failed_task% n'a pas pu être complétée car elle a une tâche précédente #%previous_task% qui doit être complétée en premier."
+import.errors.at.row: "Erreurs à la ligne %row_number%"
+import.address.geocode.error: "Impossible de géocoder l'adresse %failed_address%"
+import.time.range.error: "La plage horaire \"%value%\" dans %key% n'est pas valide"
+import.successful.rows: "Votre fichier a été traité et %count% livraisons ont été créées pour les lignes : %rows%"
+import.delivery.price.error.priceCalculation.row: "Le prix de la livraison n'a pas pu être calculé pour la ligne %row_number%"
+import.unsuccessful.rows: "Il y a eu des erreurs et les livraisons n'ont pas pu être créées pour les lignes : %rows%"
+adminDashboard.incidents.title: "Incidents"
+adminDashboard.incidents.help: "Gérer les incidents."
+adminDashboard.incidents.createNew: "Créer un nouvel incident"
+registration.confirm.invitation.link.title: "Utilisez le lien ci-dessous pour inviter des collègues à rejoindre"
+form.business_restaurant_group.restaurants_with_menu: "Restaurants avec menu"
+form.business_restaurant_group.restaurant: "Restaurant"
+form.business_restaurant_group.menu: "Menu"
+form.product.business_restaurant_group.price_definition.label: "Définir les prix pour les groupes de restaurants d'affaires"
+form.product.business_restaurant_group.price_definition.placeholder: "Veuillez en sélectionner un"
+business_restaurant_group.label: "Groupe de restaurants d'affaires"
+business_restaurant_group.form.invalid: "Il y a des erreurs ou des informations manquantes, veuillez vérifier toutes les sections de la configuration."
+business_restaurant_group.form.fill_all_pages: "Veuillez remplir les trois pages de paramètres."
+business_account.registration.user_with_same_email_exists: "Un compte avec votre email existe déjà. Veuillez vous connecter pour continuer la configuration de votre compte d'affaires."
+registration.business_account.loggin.warning_message: "Connectez-vous pour associer votre compte à l'entreprise %name%."
+registration.email.taken.loggin.warning_message: "Entrez votre mot de passe pour vous connecter."
+business_account.employee.associated: "Votre compte a été associé avec succès à l'entreprise %name%"
+business_account.loggedin_employee.association.text: "Vous êtes connecté avec l'email <strong>%user_email%</strong>. Voulez-vous associer votre compte à l'entreprise <strong>%business_account_name%</strong>?"
+business_account.loggedin_employee.association.title: "Invitation à associer votre compte à un compte d'affaires"
+topbar.action.admin_business_account: "Administrer mon compte d'affaires"
+basics.order_now: "Commander maintenant"
+restaurant.businessAccount.notAvilable: "Ce restaurant n'est pas inclus dans les restaurants de la configuration de votre entreprise. <br> Vous pouvez voir les restaurants disponibles pour votre entreprise <a href=\"%path%\">en cliquant ici</a>.\n"
+business_account.switch.order_with_business: "Commander avec mon entreprise"
+business_account.switch.ordering_with_business: "Commander avec mon entreprise"
+restaurants.edenred.add_restaurants: "Ajouter des restaurants"
+restaurants.edenred.add_list_title: "Liste des restaurants à envoyer à Edenred"
+restaurants.edenred.added_restaurants: "Restaurants ajoutés"
+restaurants.edenred.already_sent: "Les restaurants qui apparaissent barrés dans la liste sont ceux qui ont déjà été envoyés à Edenred pour incorporation. Veuillez <a href=\"%link%\">cliquer ici</a> pour vérifier leur statut."
+restaurants.edenred.added_list.name: "Nom"
+restaurants.edenred.added_list.merchant_id: "ID du commerçant"
+restaurants.edenred.added_list.tr_card_enabled: "Carte TR activée"
+restaurants.edenred.sending_success: "Les restaurants ont été envoyés avec succès à Edenred."
+restaurants.edenred.sending_failed: "Erreur lors de l'envoi des restaurants à Edenred. Veuillez réessayer plus tard."
+restaurants.edenred.sending_failed.errors: "Il y a des erreurs avec certains restaurants :"
+restaurants.edenred.sending_failed.no_siret: "Le restaurant '%restaurant_name%' n'a pas de Siret défini."
+restaurants.edenred.refresh.no_updates: "Le restaurant '%restaurant_name%' n'a pas encore de mises à jour sur les serveurs d'Edenred."
+restaurants.edenred.refresh.has_updates: "Le restaurant '%restaurant_name%' a eu une mise à jour des serveurs d'Edenred."
+restaurants.edenred.added_list.actions: "Actions"
+form.billing_method.label: "Méthode de facturation"
+form.billing_method.help: "Méthode de facturation utilisée"
+form.billing_method.unit: "Par unité"
+form.billing_method.percentage: "Pourcentage du montant de la commande"
+order.export.heading.billing_method: "Méthode de facturation"
+order.export.heading.applied_billing: "Facturation appliquée"
+deliveries.import_upload_error: "Le fichier n'a pas pu être téléchargé. Veuillez réessayer plus tard."
